feat: 환경변수 Fallback 적용 및 안정적인 Supabase DB 연동 완료